parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> interfaces funcs
Rule 2     program -> funcs
Rule 3     interfaces -> interfaces interface
Rule 4     interfaces -> interface
Rule 5     interface -> INTERFACE NAME LBRACE fields RBRACE
Rule 6     fields -> fields field
Rule 7     fields -> field
Rule 8     field -> field_function
Rule 9     field -> field_variable
Rule 10    field_function -> NAME LPAREN formal_args RPAREN SEMI
Rule 11    field_function -> NAME LPAREN RPAREN SEMI
Rule 12    field_variable -> NAME SEMI
Rule 13    funcs -> funcs func
Rule 14    funcs -> func
Rule 15    func -> DEF NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
Rule 16    func -> DEF NAME LPAREN RPAREN LBRACE statements RBRACE
Rule 17    formal_args -> formal_args COMMA formal_arg
Rule 18    formal_args -> formal_arg
Rule 19    formal_arg -> NAME
Rule 20    formal_arg -> AMP NAME
Rule 21    statements -> statements statement
Rule 22    statements -> statement
Rule 23    statement -> assign SEMI
Rule 24    assign -> qualified_name ASSIGN expression
Rule 25    statement -> VAR qualified_name_no_dot SEMI
Rule 26    statement -> BVAR qualified_name_no_dot SEMI
Rule 27    qualified_name -> qualified_name DOT NAME
Rule 28    qualified_name -> NAME
Rule 29    qualified_name_no_dot -> NAME
Rule 30    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 31    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 32    statement -> WHILE LPAREN expression RPAREN LBRACE statements RBRACE
Rule 33    statement -> expression SEMI
Rule 34    statement -> RETURN expression SEMI
Rule 35    statement -> RETURN SEMI
Rule 36    expression -> NOT expression
Rule 37    expression -> MINUS expression
Rule 38    expression -> INT LPAREN expression RPAREN
Rule 39    expression -> STR LPAREN expression RPAREN
Rule 40    expression -> BOOL LPAREN expression RPAREN
Rule 41    expression -> expression EQ expression
Rule 42    expression -> expression GREATER expression
Rule 43    expression -> expression LESS expression
Rule 44    expression -> expression NOT_EQ expression
Rule 45    expression -> expression GREATER_EQ expression
Rule 46    expression -> expression LESS_EQ expression
Rule 47    expression -> expression PLUS expression
Rule 48    expression -> expression MINUS expression
Rule 49    expression -> expression MULTIPLY expression
Rule 50    expression -> expression DIVIDE expression
Rule 51    expression -> LPAREN expression RPAREN
Rule 52    expression -> expression OR expression
Rule 53    expression -> expression AND expression
Rule 54    expression -> NUMBER
Rule 55    expression -> TRUE
Rule 56    expression -> FALSE
Rule 57    expression -> STRING
Rule 58    expression -> CLOSURE NAME
Rule 59    expression -> AT
Rule 60    expression -> NIL
Rule 61    expression -> qualified_name LPAREN args RPAREN
Rule 62    expression -> qualified_name LPAREN RPAREN
Rule 63    expression -> qualified_name
Rule 64    args -> args COMMA expression
Rule 65    args -> expression
Rule 66    expression -> LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
Rule 67    expression -> LAMBDA LPAREN RPAREN LBRACE statements RBRACE

Terminals, with rules where they appear

AMP                  : 20
AND                  : 53
ASSIGN               : 24
AT                   : 59
BOOL                 : 40
BVAR                 : 26
CLOSURE              : 58
COMMA                : 17 64
DEF                  : 15 16
DIVIDE               : 50
DOT                  : 27
ELSE                 : 31
EQ                   : 41
FALSE                : 56
GREATER              : 42
GREATER_EQ           : 45
IF                   : 30 31
INT                  : 38
INTERFACE            : 5
LAMBDA               : 66 67
LBRACE               : 5 15 16 30 31 31 32 66 67
LESS                 : 43
LESS_EQ              : 46
LPAREN               : 10 11 15 16 30 31 32 38 39 40 51 61 62 66 67
MINUS                : 37 48
MULTIPLY             : 49
NAME                 : 5 10 11 12 15 16 19 20 27 28 29 58
NIL                  : 60
NOT                  : 36
NOT_EQ               : 44
NUMBER               : 54
OR                   : 52
PLUS                 : 47
RBRACE               : 5 15 16 30 31 31 32 66 67
RETURN               : 34 35
RPAREN               : 10 11 15 16 30 31 32 38 39 40 51 61 62 66 67
SEMI                 : 10 11 12 23 25 26 33 34 35
STR                  : 39
STRING               : 57
TRUE                 : 55
VAR                  : 25
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

args                 : 61 64
assign               : 23
expression           : 24 30 31 32 33 34 36 37 38 39 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 52 53 53 64 65
field                : 6 7
field_function       : 8
field_variable       : 9
fields               : 5 6
formal_arg           : 17 18
formal_args          : 10 15 17 66
func                 : 13 14
funcs                : 1 2 13
interface            : 3 4
interfaces           : 1 3
program              : 0
qualified_name       : 24 27 61 62 63
qualified_name_no_dot : 25 26
statement            : 21 22
statements           : 15 16 21 30 31 31 32 66 67

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . interfaces funcs
    (2) program -> . funcs
    (3) interfaces -> . interfaces interface
    (4) interfaces -> . interface
    (13) funcs -> . funcs func
    (14) funcs -> . func
    (5) interface -> . INTERFACE NAME LBRACE fields RBRACE
    (15) func -> . DEF NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (16) func -> . DEF NAME LPAREN RPAREN LBRACE statements RBRACE

    INTERFACE       shift and go to state 6
    DEF             shift and go to state 7

    program                        shift and go to state 1
    interfaces                     shift and go to state 2
    funcs                          shift and go to state 3
    interface                      shift and go to state 4
    func                           shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> interfaces . funcs
    (3) interfaces -> interfaces . interface
    (13) funcs -> . funcs func
    (14) funcs -> . func
    (5) interface -> . INTERFACE NAME LBRACE fields RBRACE
    (15) func -> . DEF NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (16) func -> . DEF NAME LPAREN RPAREN LBRACE statements RBRACE

    INTERFACE       shift and go to state 6
    DEF             shift and go to state 7

    funcs                          shift and go to state 8
    interface                      shift and go to state 9
    func                           shift and go to state 5

state 3

    (2) program -> funcs .
    (13) funcs -> funcs . func
    (15) func -> . DEF NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (16) func -> . DEF NAME LPAREN RPAREN LBRACE statements RBRACE

    $end            reduce using rule 2 (program -> funcs .)
    DEF             shift and go to state 7

    func                           shift and go to state 10

state 4

    (4) interfaces -> interface .

    INTERFACE       reduce using rule 4 (interfaces -> interface .)
    DEF             reduce using rule 4 (interfaces -> interface .)


state 5

    (14) funcs -> func .

    DEF             reduce using rule 14 (funcs -> func .)
    $end            reduce using rule 14 (funcs -> func .)


state 6

    (5) interface -> INTERFACE . NAME LBRACE fields RBRACE

    NAME            shift and go to state 11


state 7

    (15) func -> DEF . NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (16) func -> DEF . NAME LPAREN RPAREN LBRACE statements RBRACE

    NAME            shift and go to state 12


state 8

    (1) program -> interfaces funcs .
    (13) funcs -> funcs . func
    (15) func -> . DEF NAME LPAREN formal_args RPAREN LBRACE statements RBRACE
    (16) func -> . DEF NAME LPAREN RPAREN LBRACE statements RBRACE

    $end            reduce using rule 1 (program -> interfaces funcs .)
    DEF             shift and go to state 7

    func                           shift and go to state 10

state 9

    (3) interfaces -> interfaces interface .

    INTERFACE       reduce using rule 3 (interfaces -> interfaces interface .)
    DEF             reduce using rule 3 (interfaces -> interfaces interface .)


state 10

    (13) funcs -> funcs func .

    DEF             reduce using rule 13 (funcs -> funcs func .)
    $end            reduce using rule 13 (funcs -> funcs func .)


state 11

    (5) interface -> INTERFACE NAME . LBRACE fields RBRACE

    LBRACE          shift and go to state 13


state 12

    (15) func -> DEF NAME . LPAREN formal_args RPAREN LBRACE statements RBRACE
    (16) func -> DEF NAME . LPAREN RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 14


state 13

    (5) interface -> INTERFACE NAME LBRACE . fields RBRACE
    (6) fields -> . fields field
    (7) fields -> . field
    (8) field -> . field_function
    (9) field -> . field_variable
    (10) field_function -> . NAME LPAREN formal_args RPAREN SEMI
    (11) field_function -> . NAME LPAREN RPAREN SEMI
    (12) field_variable -> . NAME SEMI

    NAME            shift and go to state 15

    fields                         shift and go to state 16
    field                          shift and go to state 17
    field_function                 shift and go to state 18
    field_variable                 shift and go to state 19

state 14

    (15) func -> DEF NAME LPAREN . formal_args RPAREN LBRACE statements RBRACE
    (16) func -> DEF NAME LPAREN . RPAREN LBRACE statements RBRACE
    (17) formal_args -> . formal_args COMMA formal_arg
    (18) formal_args -> . formal_arg
    (19) formal_arg -> . NAME
    (20) formal_arg -> . AMP NAME

    RPAREN          shift and go to state 22
    NAME            shift and go to state 20
    AMP             shift and go to state 24

    formal_args                    shift and go to state 21
    formal_arg                     shift and go to state 23

state 15

    (10) field_function -> NAME . LPAREN formal_args RPAREN SEMI
    (11) field_function -> NAME . LPAREN RPAREN SEMI
    (12) field_variable -> NAME . SEMI

    LPAREN          shift and go to state 25
    SEMI            shift and go to state 26


state 16

    (5) interface -> INTERFACE NAME LBRACE fields . RBRACE
    (6) fields -> fields . field
    (8) field -> . field_function
    (9) field -> . field_variable
    (10) field_function -> . NAME LPAREN formal_args RPAREN SEMI
    (11) field_function -> . NAME LPAREN RPAREN SEMI
    (12) field_variable -> . NAME SEMI

    RBRACE          shift and go to state 27
    NAME            shift and go to state 15

    field                          shift and go to state 28
    field_function                 shift and go to state 18
    field_variable                 shift and go to state 19

state 17

    (7) fields -> field .

    RBRACE          reduce using rule 7 (fields -> field .)
    NAME            reduce using rule 7 (fields -> field .)


state 18

    (8) field -> field_function .

    RBRACE          reduce using rule 8 (field -> field_function .)
    NAME            reduce using rule 8 (field -> field_function .)


state 19

    (9) field -> field_variable .

    RBRACE          reduce using rule 9 (field -> field_variable .)
    NAME            reduce using rule 9 (field -> field_variable .)


state 20

    (19) formal_arg -> NAME .

    RPAREN          reduce using rule 19 (formal_arg -> NAME .)
    COMMA           reduce using rule 19 (formal_arg -> NAME .)


state 21

    (15) func -> DEF NAME LPAREN formal_args . RPAREN LBRACE statements RBRACE
    (17) formal_args -> formal_args . COMMA formal_arg

    RPAREN          shift and go to state 29
    COMMA           shift and go to state 30


state 22

    (16) func -> DEF NAME LPAREN RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 31


state 23

    (18) formal_args -> formal_arg .

    RPAREN          reduce using rule 18 (formal_args -> formal_arg .)
    COMMA           reduce using rule 18 (formal_args -> formal_arg .)


state 24

    (20) formal_arg -> AMP . NAME

    NAME            shift and go to state 32


state 25

    (10) field_function -> NAME LPAREN . formal_args RPAREN SEMI
    (11) field_function -> NAME LPAREN . RPAREN SEMI
    (17) formal_args -> . formal_args COMMA formal_arg
    (18) formal_args -> . formal_arg
    (19) formal_arg -> . NAME
    (20) formal_arg -> . AMP NAME

    RPAREN          shift and go to state 34
    NAME            shift and go to state 20
    AMP             shift and go to state 24

    formal_args                    shift and go to state 33
    formal_arg                     shift and go to state 23

state 26

    (12) field_variable -> NAME SEMI .

    RBRACE          reduce using rule 12 (field_variable -> NAME SEMI .)
    NAME            reduce using rule 12 (field_variable -> NAME SEMI .)


state 27

    (5) interface -> INTERFACE NAME LBRACE fields RBRACE .

    INTERFACE       reduce using rule 5 (interface -> INTERFACE NAME LBRACE fields RBRACE .)
    DEF             reduce using rule 5 (interface -> INTERFACE NAME LBRACE fields RBRACE .)


state 28

    (6) fields -> fields field .

    RBRACE          reduce using rule 6 (fields -> fields field .)
    NAME            reduce using rule 6 (fields -> fields field .)


state 29

    (15) func -> DEF NAME LPAREN formal_args RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 35


state 30

    (17) formal_args -> formal_args COMMA . formal_arg
    (19) formal_arg -> . NAME
    (20) formal_arg -> . AMP NAME

    NAME            shift and go to state 20
    AMP             shift and go to state 24

    formal_arg                     shift and go to state 36

state 31

    (16) func -> DEF NAME LPAREN RPAREN LBRACE . statements RBRACE
    (21) statements -> . statements statement
    (22) statements -> . statement
    (23) statement -> . assign SEMI
    (25) statement -> . VAR qualified_name_no_dot SEMI
    (26) statement -> . BVAR qualified_name_no_dot SEMI
    (30) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (31) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (32) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (33) statement -> . expression SEMI
    (34) statement -> . RETURN expression SEMI
    (35) statement -> . RETURN SEMI
    (24) assign -> . qualified_name ASSIGN expression
    (36) expression -> . NOT expression
    (37) expression -> . MINUS expression
    (38) expression -> . INT LPAREN expression RPAREN
    (39) expression -> . STR LPAREN expression RPAREN
    (40) expression -> . BOOL LPAREN expression RPAREN
    (41) expression -> . expression EQ expression
    (42) expression -> . expression GREATER expression
    (43) expression -> . expression LESS expression
    (44) expression -> . expression NOT_EQ expression
    (45) expression -> . expression GREATER_EQ expression
    (46) expression -> . expression LESS_EQ expression
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression MULTIPLY expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . expression OR expression
    (53) expression -> . expression AND expression
    (54) expression -> . NUMBER
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . STRING
    (58) expression -> . CLOSURE NAME
    (59) expression -> . AT
    (60) expression -> . NIL
    (61) expression -> . qualified_name LPAREN args RPAREN
    (62) expression -> . qualified_name LPAREN RPAREN
    (63) expression -> . qualified_name
    (66) expression -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (67) expression -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE
    (27) qualified_name -> . qualified_name DOT NAME
    (28) qualified_name -> . NAME

    VAR             shift and go to state 42
    BVAR            shift and go to state 43
    IF              shift and go to state 44
    WHILE           shift and go to state 46
    RETURN          shift and go to state 47
    NOT             shift and go to state 49
    MINUS           shift and go to state 50
    INT             shift and go to state 51
    STR             shift and go to state 52
    BOOL            shift and go to state 53
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 54
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    STRING          shift and go to state 57
    CLOSURE         shift and go to state 58
    AT              shift and go to state 59
    NIL             shift and go to state 60
    LAMBDA          shift and go to state 61
    NAME            shift and go to state 37

    statements                     shift and go to state 39
    statement                      shift and go to state 40
    assign                         shift and go to state 41
    expression                     shift and go to state 45
    qualified_name                 shift and go to state 48

state 32

    (20) formal_arg -> AMP NAME .

    RPAREN          reduce using rule 20 (formal_arg -> AMP NAME .)
    COMMA           reduce using rule 20 (formal_arg -> AMP NAME .)


state 33

    (10) field_function -> NAME LPAREN formal_args . RPAREN SEMI
    (17) formal_args -> formal_args . COMMA formal_arg

    RPAREN          shift and go to state 62
    COMMA           shift and go to state 30


state 34

    (11) field_function -> NAME LPAREN RPAREN . SEMI

    SEMI            shift and go to state 63


state 35

    (15) func -> DEF NAME LPAREN formal_args RPAREN LBRACE . statements RBRACE
    (21) statements -> . statements statement
    (22) statements -> . statement
    (23) statement -> . assign SEMI
    (25) statement -> . VAR qualified_name_no_dot SEMI
    (26) statement -> . BVAR qualified_name_no_dot SEMI
    (30) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (31) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (32) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (33) statement -> . expression SEMI
    (34) statement -> . RETURN expression SEMI
    (35) statement -> . RETURN SEMI
    (24) assign -> . qualified_name ASSIGN expression
    (36) expression -> . NOT expression
    (37) expression -> . MINUS expression
    (38) expression -> . INT LPAREN expression RPAREN
    (39) expression -> . STR LPAREN expression RPAREN
    (40) expression -> . BOOL LPAREN expression RPAREN
    (41) expression -> . expression EQ expression
    (42) expression -> . expression GREATER expression
    (43) expression -> . expression LESS expression
    (44) expression -> . expression NOT_EQ expression
    (45) expression -> . expression GREATER_EQ expression
    (46) expression -> . expression LESS_EQ expression
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression MULTIPLY expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . expression OR expression
    (53) expression -> . expression AND expression
    (54) expression -> . NUMBER
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . STRING
    (58) expression -> . CLOSURE NAME
    (59) expression -> . AT
    (60) expression -> . NIL
    (61) expression -> . qualified_name LPAREN args RPAREN
    (62) expression -> . qualified_name LPAREN RPAREN
    (63) expression -> . qualified_name
    (66) expression -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (67) expression -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE
    (27) qualified_name -> . qualified_name DOT NAME
    (28) qualified_name -> . NAME

    VAR             shift and go to state 42
    BVAR            shift and go to state 43
    IF              shift and go to state 44
    WHILE           shift and go to state 46
    RETURN          shift and go to state 47
    NOT             shift and go to state 49
    MINUS           shift and go to state 50
    INT             shift and go to state 51
    STR             shift and go to state 52
    BOOL            shift and go to state 53
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 54
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    STRING          shift and go to state 57
    CLOSURE         shift and go to state 58
    AT              shift and go to state 59
    NIL             shift and go to state 60
    LAMBDA          shift and go to state 61
    NAME            shift and go to state 37

    statements                     shift and go to state 64
    statement                      shift and go to state 40
    assign                         shift and go to state 41
    expression                     shift and go to state 45
    qualified_name                 shift and go to state 48

state 36

    (17) formal_args -> formal_args COMMA formal_arg .

    RPAREN          reduce using rule 17 (formal_args -> formal_args COMMA formal_arg .)
    COMMA           reduce using rule 17 (formal_args -> formal_args COMMA formal_arg .)


state 37

    (28) qualified_name -> NAME .

    ASSIGN          reduce using rule 28 (qualified_name -> NAME .)
    LPAREN          reduce using rule 28 (qualified_name -> NAME .)
    DOT             reduce using rule 28 (qualified_name -> NAME .)
    SEMI            reduce using rule 28 (qualified_name -> NAME .)
    EQ              reduce using rule 28 (qualified_name -> NAME .)
    GREATER         reduce using rule 28 (qualified_name -> NAME .)
    LESS            reduce using rule 28 (qualified_name -> NAME .)
    NOT_EQ          reduce using rule 28 (qualified_name -> NAME .)
    GREATER_EQ      reduce using rule 28 (qualified_name -> NAME .)
    LESS_EQ         reduce using rule 28 (qualified_name -> NAME .)
    PLUS            reduce using rule 28 (qualified_name -> NAME .)
    MINUS           reduce using rule 28 (qualified_name -> NAME .)
    MULTIPLY        reduce using rule 28 (qualified_name -> NAME .)
    DIVIDE          reduce using rule 28 (qualified_name -> NAME .)
    OR              reduce using rule 28 (qualified_name -> NAME .)
    AND             reduce using rule 28 (qualified_name -> NAME .)
    RPAREN          reduce using rule 28 (qualified_name -> NAME .)
    COMMA           reduce using rule 28 (qualified_name -> NAME .)


state 38

    (51) expression -> LPAREN . expression RPAREN
    (36) expression -> . NOT expression
    (37) expression -> . MINUS expression
    (38) expression -> . INT LPAREN expression RPAREN
    (39) expression -> . STR LPAREN expression RPAREN
    (40) expression -> . BOOL LPAREN expression RPAREN
    (41) expression -> . expression EQ expression
    (42) expression -> . expression GREATER expression
    (43) expression -> . expression LESS expression
    (44) expression -> . expression NOT_EQ expression
    (45) expression -> . expression GREATER_EQ expression
    (46) expression -> . expression LESS_EQ expression
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression MULTIPLY expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . expression OR expression
    (53) expression -> . expression AND expression
    (54) expression -> . NUMBER
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . STRING
    (58) expression -> . CLOSURE NAME
    (59) expression -> . AT
    (60) expression -> . NIL
    (61) expression -> . qualified_name LPAREN args RPAREN
    (62) expression -> . qualified_name LPAREN RPAREN
    (63) expression -> . qualified_name
    (66) expression -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (67) expression -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE
    (27) qualified_name -> . qualified_name DOT NAME
    (28) qualified_name -> . NAME

    NOT             shift and go to state 49
    MINUS           shift and go to state 50
    INT             shift and go to state 51
    STR             shift and go to state 52
    BOOL            shift and go to state 53
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 54
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    STRING          shift and go to state 57
    CLOSURE         shift and go to state 58
    AT              shift and go to state 59
    NIL             shift and go to state 60
    LAMBDA          shift and go to state 61
    NAME            shift and go to state 37

    expression                     shift and go to state 65
    qualified_name                 shift and go to state 66

state 39

    (16) func -> DEF NAME LPAREN RPAREN LBRACE statements . RBRACE
    (21) statements -> statements . statement
    (23) statement -> . assign SEMI
    (25) statement -> . VAR qualified_name_no_dot SEMI
    (26) statement -> . BVAR qualified_name_no_dot SEMI
    (30) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (31) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (32) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (33) statement -> . expression SEMI
    (34) statement -> . RETURN expression SEMI
    (35) statement -> . RETURN SEMI
    (24) assign -> . qualified_name ASSIGN expression
    (36) expression -> . NOT expression
    (37) expression -> . MINUS expression
    (38) expression -> . INT LPAREN expression RPAREN
    (39) expression -> . STR LPAREN expression RPAREN
    (40) expression -> . BOOL LPAREN expression RPAREN
    (41) expression -> . expression EQ expression
    (42) expression -> . expression GREATER expression
    (43) expression -> . expression LESS expression
    (44) expression -> . expression NOT_EQ expression
    (45) expression -> . expression GREATER_EQ expression
    (46) expression -> . expression LESS_EQ expression
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression MULTIPLY expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . expression OR expression
    (53) expression -> . expression AND expression
    (54) expression -> . NUMBER
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . STRING
    (58) expression -> . CLOSURE NAME
    (59) expression -> . AT
    (60) expression -> . NIL
    (61) expression -> . qualified_name LPAREN args RPAREN
    (62) expression -> . qualified_name LPAREN RPAREN
    (63) expression -> . qualified_name
    (66) expression -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (67) expression -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE
    (27) qualified_name -> . qualified_name DOT NAME
    (28) qualified_name -> . NAME

    RBRACE          shift and go to state 67
    VAR             shift and go to state 42
    BVAR            shift and go to state 43
    IF              shift and go to state 44
    WHILE           shift and go to state 46
    RETURN          shift and go to state 47
    NOT             shift and go to state 49
    MINUS           shift and go to state 50
    INT             shift and go to state 51
    STR             shift and go to state 52
    BOOL            shift and go to state 53
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 54
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    STRING          shift and go to state 57
    CLOSURE         shift and go to state 58
    AT              shift and go to state 59
    NIL             shift and go to state 60
    LAMBDA          shift and go to state 61
    NAME            shift and go to state 37

    statement                      shift and go to state 68
    assign                         shift and go to state 41
    expression                     shift and go to state 45
    qualified_name                 shift and go to state 48

state 40

    (22) statements -> statement .

    RBRACE          reduce using rule 22 (statements -> statement .)
    VAR             reduce using rule 22 (statements -> statement .)
    BVAR            reduce using rule 22 (statements -> statement .)
    IF              reduce using rule 22 (statements -> statement .)
    WHILE           reduce using rule 22 (statements -> statement .)
    RETURN          reduce using rule 22 (statements -> statement .)
    NOT             reduce using rule 22 (statements -> statement .)
    MINUS           reduce using rule 22 (statements -> statement .)
    INT             reduce using rule 22 (statements -> statement .)
    STR             reduce using rule 22 (statements -> statement .)
    BOOL            reduce using rule 22 (statements -> statement .)
    LPAREN          reduce using rule 22 (statements -> statement .)
    NUMBER          reduce using rule 22 (statements -> statement .)
    TRUE            reduce using rule 22 (statements -> statement .)
    FALSE           reduce using rule 22 (statements -> statement .)
    STRING          reduce using rule 22 (statements -> statement .)
    CLOSURE         reduce using rule 22 (statements -> statement .)
    AT              reduce using rule 22 (statements -> statement .)
    NIL             reduce using rule 22 (statements -> statement .)
    LAMBDA          reduce using rule 22 (statements -> statement .)
    NAME            reduce using rule 22 (statements -> statement .)


state 41

    (23) statement -> assign . SEMI

    SEMI            shift and go to state 69


state 42

    (25) statement -> VAR . qualified_name_no_dot SEMI
    (29) qualified_name_no_dot -> . NAME

    NAME            shift and go to state 71

    qualified_name_no_dot          shift and go to state 70

state 43

    (26) statement -> BVAR . qualified_name_no_dot SEMI
    (29) qualified_name_no_dot -> . NAME

    NAME            shift and go to state 71

    qualified_name_no_dot          shift and go to state 72

state 44

    (30) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE
    (31) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    LPAREN          shift and go to state 73


state 45

    (33) statement -> expression . SEMI
    (41) expression -> expression . EQ expression
    (42) expression -> expression . GREATER expression
    (43) expression -> expression . LESS expression
    (44) expression -> expression . NOT_EQ expression
    (45) expression -> expression . GREATER_EQ expression
    (46) expression -> expression . LESS_EQ expression
    (47) expression -> expression . PLUS expression
    (48) expression -> expression . MINUS expression
    (49) expression -> expression . MULTIPLY expression
    (50) expression -> expression . DIVIDE expression
    (52) expression -> expression . OR expression
    (53) expression -> expression . AND expression

    SEMI            shift and go to state 74
    EQ              shift and go to state 75
    GREATER         shift and go to state 76
    LESS            shift and go to state 77
    NOT_EQ          shift and go to state 78
    GREATER_EQ      shift and go to state 79
    LESS_EQ         shift and go to state 80
    PLUS            shift and go to state 81
    MINUS           shift and go to state 82
    MULTIPLY        shift and go to state 83
    DIVIDE          shift and go to state 84
    OR              shift and go to state 85
    AND             shift and go to state 86


state 46

    (32) statement -> WHILE . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 87


state 47

    (34) statement -> RETURN . expression SEMI
    (35) statement -> RETURN . SEMI
    (36) expression -> . NOT expression
    (37) expression -> . MINUS expression
    (38) expression -> . INT LPAREN expression RPAREN
    (39) expression -> . STR LPAREN expression RPAREN
    (40) expression -> . BOOL LPAREN expression RPAREN
    (41) expression -> . expression EQ expression
    (42) expression -> . expression GREATER expression
    (43) expression -> . expression LESS expression
    (44) expression -> . expression NOT_EQ expression
    (45) expression -> . expression GREATER_EQ expression
    (46) expression -> . expression LESS_EQ expression
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression MULTIPLY expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . expression OR expression
    (53) expression -> . expression AND expression
    (54) expression -> . NUMBER
    (55) expression -> . TRUE
    (56) expression -> . FALSE
    (57) expression -> . STRING
    (58) expression -> . CLOSURE NAME
    (59) expression -> . AT
    (60) expression -> . NIL
    (61) expression -> . qualified_name LPAREN args RPAREN
    (62) expression -> . qualified_name LPAREN RPAREN
    (63) expression -> . qualified_name
    (66) expression -> . LAMBDA LPAREN formal_args RPAREN LBRACE statements RBRACE
    (67) expression -> . LAMBDA LPAREN RPAREN LBRACE statements RBRACE
    (27) qualified_name -> . qualified_name DOT NAME
    (28) qualified_name -> . NAME

    SEMI            shift and go to state 89
    NOT             shift and go to state 49
    MINUS           shift and go to state 50
    INT             shift and go to state 51
    STR             shift and go to state 52
    BOOL            shift and go to state 53
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 54
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    STRING          shift and go to state 57
    CLOSURE         shift and go to state 58
    AT              shift and go to state 59
    NIL             shift and go to state 60
    LAMBDA          shift and go to state 61
    NAME            shift and go to state 37

    expression                     shift and go to state 88
    qualified_name                 shift and go to state 66

state 48

    (24) assign -> qualified_name . ASSIGN expression
    (61) expression -> qualified_name . LPAREN args RPAREN
    (62) expression -> qualified_name . LPAREN RPAREN
    (63) expression -> qualified_name .
    (27) qualified_name -> qualified_name . DOT NAME

    ASSIGN          shift and go to state 90
    LPAREN          shift and go to state 91
    SEMI            reduce using rule 63 (expression -> qualified_name .)
    EQ              reduce using rule 63 (expression -> qualified_name .)
    GREATER         reduce using rule 63 (expression -> qualified_name .)
    LESS            reduce using rule 63 (expression -> qualified_name .)
    NOT_EQ          reduce using rule 63 (expression -> qualified_name .)
    GREATER_EQ      reduce using rule 63 (expression -> qualified_name .)
    LESS_EQ         reduce using rule 63 (expression -> qualified_name .)
    PLUS            reduce using rule 63 (expression -> qualified_name .)
    MINUS           reduce using rule 63 (expression -> qualified_name .)
    MULTIPLY        reduce using rule 63 (expression -> qualified_name .)
    DIVIDE          reduce using rule 63 (expression -> qualified_name .)
    OR              reduce using rule 63 (expression -> qualified_name .)
    AND             reduce using rule 63 (expression -> qualified_name .)
    DOT             shift and go to state 92


state 49

    (36) expression -> NOT . expression
    (36) expression -> . NOT expression
    (37) expression -> . MINUS expression
    (38) expression -> . INT LPAREN expression RPAREN
    (39) expression -> . STR LPAREN expression RPAREN
    (40) expression -> . BOOL LPAREN expression RPAREN
